edition = "2024";

package sshagentmux.api;
option go_package = "github.com/na4ma4/ssh-agent-mux/api";

import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_OPAQUE;

import "google/protobuf/timestamp.proto";
import "github.com/dosquad/go-cliversion/version.proto";

// Defines commands for communicating with ssh-agent-mux daemon
message Config {
	string id = 1;
	google.protobuf.Timestamp ts = 2;

	reserved 3 to 9;

	string socket_path = 10;
	repeated string backend_socket_path = 11;
	int64 pid = 12;
	google.protobuf.Timestamp start_time = 13;

	reserved 14 to 99;

	string version = 100;
	dosquad.cliversion.VersionInfo version_info = 101;
}

// Ping/Pong commands for health checking
message Ping {
	string id = 1;
	google.protobuf.Timestamp ts = 2;
}

// Pong response to Ping
message Pong {
	string id = 1;
	google.protobuf.Timestamp ts = 2;
	google.protobuf.Timestamp ping_ts = 3;
	google.protobuf.Timestamp start_time = 4;

	reserved 5 to 9;

	int64 pid = 10;
	string version = 11;
}

// Shutdown command to stop the daemon
message ShutdownRequest {
	string id = 1;
	google.protobuf.Timestamp ts = 2;

	reserved 3 to 9;

	bool force = 10;
}

// Response to commands
message CommandResponse {
	string id = 1;
	google.protobuf.Timestamp ts = 2;

	reserved 3 to 9;

	bool success = 10;
	string message = 11;
}

// Request for configuration
message ConfigRequest {
	string id = 1;
	google.protobuf.Timestamp ts = 2;
}
